// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typist should render Typist 1 without throwing an error 1`] = `
<Typist>
  <div>
    <div
      className="jsx-2864633268 type-effect"
      key="0"
    >
      <div>
        Test Typist 1
      </div>
      <JSXStyle
        id="2864633268"
      />
    </div>
  </div>
</Typist>
`;

exports[`Typist should render without throwing an error 1`] = `
<Typist>
  <div>
    <div
      className="jsx-2864633268 type-effect"
      key="0"
    >
      <JSXStyle
        id="2864633268"
      />
    </div>
  </div>
</Typist>
`;
